--- a/templates/chat.html
+++ b/templates/chat.html
@@ -14,7 +14,7 @@
         {% if resposta %}
         <div class="resposta">
             <p><strong>Sua Pergunta:</strong> {{ pergunta }}</p>
-            <p><strong>Resposta:</strong> {{ resposta }}</p>
+            <p id="resp-chat"><strong>Resposta:</strong> {{ resposta }}</p>
         </div>
         {% endif %}
     </section>
