--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a class="navbar-brand" href="/">
-        <img class="logo" src="{{ url_for('static', filename='img/80.jpg') }}" alt="">
+        <img class="logo" src="{{ url_for('static', filename='img/800.png') }}" alt="">
         ONG Projeto Vidas
     </a>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
